[feat]: added styles for projects page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button {
+    @apply bg-cyan-400 shadow rounded-lg text-white dark:text-black py-2 px-5 text-sm;
+}
